# logging

./: CMakeLists.txt
include/: Log.hpp
src/: Log.cpp
